--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
     cursor: pointer;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-bottom: 10px;
-
 }
 #timeDisplay {
     font-size: 75px;
@@ -20,6 +19,7 @@ body{
 }
 #timeContainer{
     background-color : #222222;
+    border-radius: 40px;
     text-align: center;
     margin-top: 200px;
     margin-left: 250px;
